<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">
    
    
    <EditText
         android:id="@+id/firstname"
         android:layout_width="300dp"
         android:layout_height="30dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/edittext"
         android:ems="10"
         android:layout_gravity="center"
         android:hint="@string/firstname"><requestFocus /></EditText>
    
    
    <EditText
         android:id="@+id/lastname"
         android:layout_width="300dp"
         android:layout_height="30dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/edittext"
         android:ems="10"
         android:layout_gravity="center"
         android:hint="@string/lastname" />
    
     <EditText
         android:id="@+id/username"
         android:layout_width="300dp"
         android:layout_height="30dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/edittext"
         android:ems="10"
         android:layout_gravity="center"
         android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:ems="20"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:orientation="horizontal" />
    
       <EditText
           android:id="@+id/confirm_password"
           android:layout_width="300dp"
           android:layout_height="30dp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:layout_marginTop="20dp"
           android:background="@drawable/edittext"
           android:ems="20"
           android:layout_gravity="center"
           android:hint="@string/confirm_password"
           android:inputType="textPassword"
           android:orientation="horizontal" />
    
    <EditText
        android:id="@+id/phone_number"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:layout_gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone" >

    </EditText>

    <EditText
        android:id="@+id/email_id"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:layout_gravity="center"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_buttons"
        android:text="@string/signup"
        android:textSize="20sp" />

</LinearLayout>
