<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background"
     >
    
    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:layout_gravity="center"
        android:hint="@string/username"
        android:inputType="text" ><requestFocus /></EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword" />
    
     <Button
         android:id="@+id/login"
         android:layout_width="150dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:background="@drawable/custom_buttons"
         android:text="@string/login"
         android:textSize="20sp" />

       <Button
           android:id="@+id/signup"
           android:layout_width="150dp"
           android:layout_height="40dp"
           android:layout_gravity="center"
           android:layout_marginTop="30dp"
           android:background="@drawable/custom_buttons"
           android:text="@string/signup"
           android:textSize="20sp" />

</LinearLayout>
